fixed connection issues

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,1 +1,10 @@
-<h1>hello world</h1>
+
+<div class="jumbotron">
+    <div class="container">
+        <h1>Friend Finderz</h1>
+        <p>{{friendCount}} friends signed up!</p>
+        <p>
+            <a class="btn btn-primary btn-lg">Find a New Friend</a>
+        </p>
+    </div>
+</div>
