--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,10 +1,23 @@
 
+<style>
+    .jumbotron{
+        background-image: url("https://www.rd.com/wp-content/uploads/2016/02/02-friends-make-you-more-attractive.jpg");
+        background-size:100%;
+        height:400px;
+        border-bottom:solid;
+        border-bottom-color:black;
+        border-bottom-width:2px;
+    }
+</style>
 <div class="jumbotron">
     <div class="container">
         <h1>Friend Finderz</h1>
         <p>{{friendCount}} friends signed up!</p>
         <p>
-            <a class="btn btn-primary btn-lg">Find a New Friend</a>
+            <a class="btn btn-success btn-lg" href="/survey">Find a New Friend</a>
         </p>
     </div>
+</div>
+<div class="container">
+    <a href="/api/allfriends">All friends API</a>
 </div>
